# ChangeLog for dev-python/elasticsearch-py
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/elasticsearch-py/ChangeLog,v 1.10 2015/07/22 03:59:20 idella4 Exp $

*elasticsearch-py-1.6.0 (22 Jul 2015)

  22 Jul 2015; Ian Delaney <idella4@gentoo.org> +elasticsearch-py-1.6.0.ebuild:
  bump

*elasticsearch-py-1.5.0 (07 Jun 2015)

  07 Jun 2015; Ian Delaney <idella4@gentoo.org> +elasticsearch-py-1.5.0.ebuild:
  bump; virtual re-write

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  07 Jun 2015; Markus Meier <maekke@gentoo.org> elasticsearch-py-1.4.0.ebuild:
  arm stable, bug #540290

  08 Apr 2015; Justin Lecher <jlec@gentoo.org> -elasticsearch-py-1.3.0.ebuild,
  elasticsearch-py-1.4.0.ebuild, metadata.xml:
  Add pypy support, drop old

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> elasticsearch-py-1.4.0.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> elasticsearch-py-1.4.0.ebuild:
  amd64 stable, bug 540290

*elasticsearch-py-1.4.0 (15 Feb 2015)

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org>
  +elasticsearch-py-1.4.0.ebuild:
  Bump

  07 Feb 2015; Ian Delaney <idella4@gentoo.org> elasticsearch-py-1.3.0.ebuild:
  drop old impl

*elasticsearch-py-1.3.0 (22 Jan 2015)

  22 Jan 2015; Mike Frysinger <vapier@gentoo.org>
  +elasticsearch-py-1.3.0.ebuild, +metadata.xml:
  Initial ebuild based on ikelos.