@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>python</herd>
+  <herd>proxy-maintainers</herd>
+  <maintainer>
+    <email>idella4@gentoo.org</email>
+  </maintainer>
+  <maintainer>
+    <email>hydrapolic@gmail.com</email>
+    <name>Tomas Mozes</name>
+    <description>Proxy maintainer</description>
+  </maintainer>
   <upstream>
     <remote-id type="github">elasticsearch/elasticsearch-py</remote-id>
   </upstream>
