@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/elasticsearch-py
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/elasticsearch-py/ChangeLog,v 1.10 2015/07/22 03:59:20 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/elasticsearch-py/ChangeLog,v 1.11 2015/07/23 09:09:07 idella4 Exp $
+
+  23 Jul 2015; Ian Delaney <idella4@gentoo.org> metadata.xml:
+  Designate proxy maintainer under the proxy-maint herd
 
 *elasticsearch-py-1.6.0 (22 Jul 2015)
 
